--- a/UnitConverter/UnitConverter/UnitConverter.csproj
+++ b/UnitConverter/UnitConverter/UnitConverter.csproj
@@ -90,7 +90,7 @@
     <Compile Include="ConverterClasses\TemperatureConverter.cs" />
     <Compile Include="ConverterClasses\Unit.cs" />
     <Compile Include="ConverterClasses\UnitConverter.cs" />
-    <Page Include="MainWindow.xaml">
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -100,16 +100,16 @@
     </Compile>
     <Compile Include="ConverterClasses\Converter.cs" />
     <Compile Include="Model\ConverterContext.cs" />
-    <Compile Include="IServiceRepository.cs" />
-    <Compile Include="AzureServiceRepository.cs" />
-    <Compile Include="SqlServiceRepository.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Repositories\IServiceRepository.cs" />
+    <Compile Include="Repositories\AzureServiceRepository.cs" />
+    <Compile Include="Repositories\SqlServiceRepository.cs" />
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
