--- a/Konwerter/Konwerter/App.config
+++ b/Konwerter/Konwerter/App.config
@@ -15,7 +15,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="KonwContext" connectionString="data source=.\SQLEXPRESS;initial catalog=konwerter2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="StatisticsModel" connectionString="data source=.\SQLEXPRESS;initial catalog=konwerter2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="StatisticsModel" connectionString="data source=.\SQLEXPRESS;initial catalog=konwerter2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />  -->
   </connectionStrings>
   <appSettings>
     <add key="StatisticsRepository" value="AzureStorage" />
