--- a/Konwerter/Konwerter/Konwerter.csproj
+++ b/Konwerter/Konwerter/Konwerter.csproj
@@ -100,9 +100,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="KonwContext.cs" />
+    <Compile Include="Model\KonwContext.cs" />
     <Compile Include="Model\Konwerter_stat.cs" />
-    <Compile Include="Model\StatisticsModel.cs" />
     <Compile Include="Model\Staty2.cs" />
     <Compile Include="StatystykiAzureStorageRepo.cs" />
     <Compile Include="StatystykiObiekt.cs" />
@@ -116,7 +115,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="konwerter_stat.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
