--- a/JIPP5-LAB/packages.config
+++ b/JIPP5-LAB/packages.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
-  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="3.0.4" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
   <package id="Unity" version="5.11.1" targetFramework="net472" />
+  <package id="Unity.Abstractions" version="5.11.1" targetFramework="net472" />
+  <package id="Unity.Container" version="5.11.1" targetFramework="net472" />
   <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net472" />
 </packages>
