Lab 3 - New Converter plugin

--- a/Konwerter/Konwerter.csproj
+++ b/Konwerter/Konwerter.csproj
@@ -99,7 +99,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Converter\Converter.cs" />
+    <Compile Include="Converter\ConvertersService.cs" />
     <Compile Include="Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -141,6 +141,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConverterSDK\ConverterSDK.csproj">
+      <Project>{a9784218-7022-49b0-8965-d7b94e1fda74}</Project>
+      <Name>ConverterSDK</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
