--- a/Konwerter_Azure/Konwerter_Azure/Konwerter_Azure.csproj
+++ b/Konwerter_Azure/Konwerter_Azure/Konwerter_Azure.csproj
@@ -84,7 +84,10 @@
     <Compile Include="Model\StatisticsModel.cs" />
     <Compile Include="Model\Statystyki.cs" />
     <Compile Include="Model\StatystykiObliczen.cs" />
-    <Compile Include="PrzeliczTemperature.cs" />
+    <Compile Include="Services\PrzeliczMaseKonwerter.cs" />
+    <Compile Include="Services\PrzeliczPowierzchnieKonwerter.cs" />
+    <Compile Include="Services\PrzeliczTemperatureKonwerter.cs" />
+    <Compile Include="Services\ConvertersService.cs" />
     <Compile Include="StatisticDTO.cs" />
     <Compile Include="StatisticsAzureStorageRepository.cs" />
     <Compile Include="StatisticsSqlRepository.cs" />
@@ -126,9 +129,16 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Converter.SDK\Converter.SDK.csproj">
+      <Project>{59a8d9e8-2ce7-4f6d-954d-72afd9065ae2}</Project>
+      <Name>Converter.SDK</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
