Karol Paluch Zadanie 4

--- a/Konwerter_jednostek/Konwerter_jednostek.csproj
+++ b/Konwerter_jednostek/Konwerter_jednostek.csproj
@@ -6,11 +6,20 @@
     <UseWPF>true</UseWPF>
     <ApplicationIcon />
     <StartupObject />
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.4" />
     <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="SDK">
+      <HintPath>..\SDK\bin\Debug\SDK.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Configuration" />
   </ItemGroup>
 
 </Project>
