--- a/ConverterApp/WpfApp1/WpfApp1.csproj
+++ b/ConverterApp/WpfApp1/WpfApp1.csproj
@@ -92,15 +92,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="IStatisticsRepository.cs" />
-    <Compile Include="StatisticDTO.cs" />
-    <Compile Include="StatisticsAzureRepository.cs" />
-    <Compile Include="StatisticsLocalDBRepository.cs" />
-    <Compile Include="UnitManager.cs" />
-    <Compile Include="Units.cs" />
-    <Compile Include="UsageStatistic.cs" />
-    <Compile Include="UsageStatisticsModel.cs" />
-    <Compile Include="UsageStatiticsEntity.cs" />
+    <Compile Include="Storage\IStatisticsRepository.cs" />
+    <Compile Include="Storage\StatisticDTO.cs" />
+    <Compile Include="Storage\StatisticsAzureRepository.cs" />
+    <Compile Include="Storage\StatisticsLocalDBRepository.cs" />
+    <Compile Include="Units\LengthUnits.cs" />
+    <Compile Include="Units\TemperatureUnits.cs" />
+    <Compile Include="Units\UnitManager.cs" />
+    <Compile Include="Model\UsageStatistic.cs" />
+    <Compile Include="Model\UsageStatisticsModel.cs" />
+    <Compile Include="Model\UsageStatiticsEntity.cs" />
+    <Compile Include="Units\WeightUnits.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -109,7 +111,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Converter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -143,6 +144,15 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Units.SDK\Units.SDK.csproj">
+      <Project>{F754D367-9034-4A53-9A22-455DB64C9B76}</Project>
+      <Name>Units.SDK</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
